hphp/hack/test/typecheck/suspend_operator_err6.php.exp
File "suspend_operator_err6.php", line 5, characters 16-26:
Function '\Shapes::idx' is not a coroutine and cannot be used in as an argument of 'suspend' operator. (Typing[4172])
